# Arm11_Project

./: .gitignore  CMakeLists.txt  Makefile
doc/: Checkpoint.tex  Report.tex
programs/: gpio.s  threeBitCounter.s
programs/ourLanguage/: 1BitCounter.txt  1bc.s  3BitCounter.s  3BitCounter.txt  3bc.s  3bctest.s  5BitCounter.txt  5bc.s  backAndForth.s  backAndForth.txt
src/: Makefile  TODO.txt  Todo_list.txt  assemble.c  binaryShift.c  binaryShift.h  branch.c  branch.h  checkCond.c  checkCond.h  compilerMain.c  dataProcess.c  dataProcess.h  dataTransfer.c  dataTransfer.h  decodeAndExecute.c  decodeAndExecute.h  emulate  emulate.c  emulate.h  genInstr.c  genInstr.h  getOperand2.c  getOperand2.h  iMultiply.c  iMultiply.h  io.c  io.h  make_simple  memory_util.h  printState.c  printState.h  updateCPSR.c  updateCPSR.h  util.c  util.h
src/3bitcounter/: 3bitcounter.s
src/assembler/: ListMap.c  ListMap.h  assemble.c  assembler.c  assembler.h  assemblerStruct.h  functionTable.c  functionTable.h  genInstr.c  genInstr.h  io.c  io.h  symbolTable.c  symbolTable.h  tokenHandlerUtil.c  tokenHandlerUtil.h  tokenHandlers.c  tokenHandlers.h  tokenizer.c  tokenizer.h
src/compiler/: FunctionTable.c  FunctionTable.h  compiler.c  compiler.h  compilerFunctionTable.c  compilerFunctionTable.h  compilerStruct.h  compilerTokenizer.c  compilerTokenizer.h  expressionHandlers.c  expressionHandlers.h  instructionMaker.c  instructionMaker.h  variable.c  variable.h  variableStruct.h
src/emulator/: branch.c  branch.h  checkCond.c  checkCond.h  dataProcess.c  dataProcess.h  dataTransfer.c  dataTransfer.h  decodeAndExecute.c  decodeAndExecute.h  getOperand2.c  getOperand2.h  global_state.c  global_state.h  iMultiply.c  iMultiply.h  printState.c  printState.h  updateCPSR.c  updateCPSR.h  util.h
src/util/: FunctionTable.c  FunctionTable.h  GenericListMap.c  GenericListMap.h  GenericListMapIterator.c  GenericListMapIterator.h  GenericListMapNode.c  GenericListMapNode.h  HashMap.c  HashMap.h  ListMap.c  ListMap.h  ListMapIterator.c  ListMapIterator.h  ListMapNode.c  ListMapNode.h  util.c  util.h
test/Compiler/: CompilerTests.c  TokenizerTest.c  TokenizerTest.h
test/assemble/: GenericListMap_String_FP_test.c  GenericListMap_String_FP_test.h  ListMapTests.c  ListMapTests.h
test/assembler/: test_assemble.c
test/compiler/: CompilerTests
test/emulate/: branch_test.c  makefile  util_test  util_test.c  util_test.h
test/lib/: testsuite.rb
